=head1 Krang Changelog

This document contains a list of changes for each release of Krang.


=head2 v2.1(?)

=over

=item *

Fixed a bug in Krang::lib which caused "legacy" /krang/element_lib path to
not be included in Perl's @INC path.  [Jesse Erlbaum]

=back


=head2 v2.000

=over

=item *

Fixed a bug in bin/krang_backup where foreign key constraints in the wrong order were 
conflicting with addons containing innodb tables.  Patch sets foreign_key_checks=0 
at the top of the dump file. [Michael Peters]

=item *

Fixed a bug in Krang::Publisher::ZeroSizeOutPut().  Wrong hash keys specified.
[Jesse Erlbaum]

=item *

Added C<delete> action to track in Krang::History::add_history().
Added add_history() calls in Krang::Story::delete(), Krang::Template::delete(), 
and Krang::Media::delete() [Aaron Dancygier]

=item *

Converted default element set to use Krang::ClassLoader and Krang::ClassFactory in 
compliance with new addon system. [Aaron Dancygier]

=item *

Fixed a bug where deleting an element and then reverting to an older
version where that element existed didn't properly restore the
element.  The old element would load properly but save wouldn't
restore it in the database. [Sam]

=item *

Added support for Fedora Core 4. [Aaron Dancygier]

=item *

Fixed compile bug in krang_backup introduced during the addon v2
work. [Sam]

=item *

Fixed link to static files (images, CSS, Javascript) to work through
the root server. [Sam]

=back

=head2 v1.999

=over

=item *

Added support for a new optional DBSock directive in krang.conf that
allows Krang to connect to a local MySQL server using a
user-configurable socket file location to resolve socket-related DBI
connection errors. [David Kaufman]

=item *

Refactored Krang::Scheduler class into 
Krang::Schedule 
Krang::Schedule::Action and 
Krang::Schedule::Action::[expire|publish|...|YourClass]
Where YourClass must implement an execute method.  
This Paves the way for custom scheduler addons.  